@@ -1,6 +1,10 @@
 LIST OF CHANGES
 ---------------
 
+ - a generic way to specify constructor options in the function
+   listing in a registry and its implementation to iRODS archival
+   jobs and a stage2pp job
+
 release 57.16.0
  - a new function for archival of pp data to iRODS
  - stage2pp function implementatio. is refactored to create common functions
